pvc.yaml

apiVersion: v1
kind: Pod
metadata:
 name: busybox
spec:
 volumes:
 - name: host-volume
   persistentVolumeClaim:
     claimName: pvc-hostpath
 nodeSelector:
  kubernetes.io/hostname: kind-worker     
 containers:
 - image: busybox
   name: busybox
   command: ["/bin/sh"]
   args: ["-c", "sleep 600"]
   volumeMounts:
   - name: host-volume
     mountPath: /some/path/in/container
