ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-v1
  labels:
    app: nginx-v1
spec:
  containers:
    - name: nginx-v1
      image: nginx:1.15.9

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-v1-service
spec:
  selector:
    app: nginx-v1
  ports:
    - port: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-v2
  labels:
    app: nginx-v2
spec:
  containers:
    - name: nginx-v2
      image: nginx:1.15.12

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-v2-service
spec:
  selector:
    app: nginx-v2
  ports:
    - port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx   # <-- this is the key!
  rules:
  - http:
      paths:
        - path: /v1(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: nginx-v1-service
              port:
                number: 80
        - path: /v2(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: nginx-v2-service
              port:
                number: 80
